WATII-3058: node server config adjusted

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,6 +8,19 @@
 		<meta name="apple-touch-fullscreen" content="yes"/>
 		<meta names="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<script src="config.js"></script>
+		<script src="js/gtm.js"></script>
+		<script>
+			var gtmId = config.gtm.containerId;
+			GTM.addToDataLayer('pageType', 'Overview');
+		</script>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+				new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer',gtmId);</script>
+		<!-- End Google Tag Manager -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 		<script src="library/sly.min.js"></script>
@@ -20,7 +33,6 @@
 	</head>
 	<body class="view">
 	</body>
-	<script src="config.js"></script>
 	<script src="js/main.js"></script>
 	<script src="library/navigo.js"></script>
 	<script src="router.js"></script>
