WATII-2813: status after integrated into cms

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -31,7 +31,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 		<title>pili-ana</title>
 	</head>
-	<body class="view">
+	<body class="view" data-user="592727968">
 	</body>
 	<script src="js/main.js"></script>
 	<script src="library/navigo.js"></script>
