--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,38 +2,39 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<title>Pili-Ana</title>
 
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0, shrink-to-fit=no">
 	<meta name="apple-touch-fullscreen" content="yes"/>
 	<meta names="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<script src="config.js"></script>
-	<script src="js/gtm.js"></script>
-	<script>
-		var gtmId = config.gtm.containerId;
-	</script>
-	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer',gtmId);</script>
-	<!-- End Google Tag Manager -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-	<script src="library/sly.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/icons.css">
-	<link rel="stylesheet" type="text/css" href="css/loader.css">
-	<link rel="stylesheet" type="text/css" href="css/dashboard.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-	<title>Pili-Ana</title>
+
+	<link rel="stylesheet" type="text/css" href="Piliana/1.0.0/css/piliana.css">
+
 </head>
-<body class="view" data-user="255860191">
+<body>
+
+	<div id="piliana-container" class="piliana-container"></div>
+	<script src="Piliana/1.0.0/js/piliana.js"></script>
+	<script>
+		console.log('=> initializing piliana');
+		var myPiliana = new Piliana('#piliana-container', {
+			language: "de",
+			api: {
+				overview: "https://bunni.fixxtest.ch/api/1.0/piliana/discussions.json",
+				discussion: "https://bunni.fixxtest.ch/api/1.0/piliana/comments.json",
+				approve: "https://bunni.fixxtest.ch/api/1.0/piliana/approve.json",
+				delete: "https://bunni.fixxtest.ch/api/1.0/piliana/reject.json",
+				respond: "https://bunni.fixxtest.ch/api/1.0/piliana/respond.json",
+				perspective: "https://commentanalyzer.googleapis.com/v1alpha1/comments:analyze?key=AIzaSyCYKugAmg-s7f95Y52NDQ3uYAvXuAv3Tbk",
+			},
+			gtm: {
+				containerId: "GTM-NDCPZFM"
+			}
+		});
+	</script>
+
 </body>
-<script src="js/main.js"></script>
-<script src="library/navigo.js"></script>
-<script src="router.js"></script>
 
 </html>
