--- a/piliana/index.html
+++ b/piliana/index.html
@@ -10,26 +10,26 @@
 	<meta names="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
-	<link rel="stylesheet" type="text/css" href="Piliana/1.0.0/css/piliana.css">
+	<link rel="stylesheet" type="text/css" href="css/piliana.css">
 
 </head>
 <body>
 
 	<div id="piliana-container" class="piliana-container"></div>
-	<script src="Piliana/1.0.0/js/piliana.js"></script>
+	<script src="js/piliana.js"></script>
 	<script>
 		var myPiliana = new Piliana('#piliana-container', {
 			language: "de",
 			api: {
-				overview: "https://bunni.fixxtest.ch/api/1.0/piliana/discussions.json",
-				discussion: "https://bunni.fixxtest.ch/api/1.0/piliana/comments.json",
-				approve: "https://bunni.fixxtest.ch/api/1.0/piliana/approve.json",
-				delete: "https://bunni.fixxtest.ch/api/1.0/piliana/reject.json",
-				respond: "https://bunni.fixxtest.ch/api/1.0/piliana/respond.json",
-				perspective: "https://commentanalyzer.googleapis.com/v1alpha1/comments:analyze?key=AIzaSyCYKugAmg-s7f95Y52NDQ3uYAvXuAv3Tbk",
+				overview: "",
+				discussion: "",
+				approve: "",
+				delete: "",
+				respond: "",
+				perspective: "",
 			},
 			gtm: {
-				containerId: "GTM-NDCPZFM"
+				containerId: ""
 			}
 		});
 	</script>
