--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="bullet-point">
               <span class="bullet"></span>
               <h4>Showing the toxicity level of a user comment</h4>
-              <p>Pili-ana shows the toxicity score calculated by <a href="https://www.perspectiveapi.com" target="_blank" follow="noFollow">Jigsasw' Perspective API </a> to help the moderator to approve or delete a comment.</p>
+              <p>Pili-ana shows the toxicity score calculated by <a href="https://www.perspectiveapi.com" target="_blank" follow="noFollow">Jigsaw's Perspective API </a> to help the moderator to approve or delete a comment.</p>
             </div>
           </div>
         </div>
