--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <h1 class="" >Re-opening the dialogue between editors and users</h1>
             <div class="space-20"></div>
             <div class="desc">
-              <p>Pili-ana is an open-source, mobile-friendly web application highlighting the most relevant discussions and comments.
-                The mobile-friendly GUI will allow journalists to efficiently interact with the highlighted opportunities,
-                approve or delete user comments, reply to user comments. Pili-ana will therefore have a vast impact on the
-                credibility of journalists and media, empowering them to take the lead in the public discussion on their platforms
+              <p>Pili-ana is an open-source, mobile-friendly web application to help moderating online discussions and comments.
+                The mobile-friendly GUI allows journalists to efficiently approve, delete and reply to comments. 
+                Pili-ana will therefore have a vast impact on the credibility of journalists and media, empowering them to take
+                the lead in the public discussions on their platform.
               </p>
             </div>
             <div class="space-20"></div>
@@ -71,8 +71,8 @@
           <div class="col-xs-12 col-md-6">
             <div class="page-title text-center">
               <h3 class="left">The problem</h3>
-              <p class="left">Journalists don't discuss with their audiences in the comments sections of news media. Therefore a public
-              discourse very important for a functioning democracy happens without them - others happily take over their place.
+              <p class="left">Journalists don't discuss with their audiences in the comments sections of news media. But a public
+              discourse is very important for a functioning democracy.
               </p>
               <div class="space-20"></div>
             </div>
@@ -80,8 +80,8 @@
           <div class="col-xs-12 col-md-6 col-md-offset-6">
             <div class="page-title text-center">
               <h3 class="right">Our solution</h3>
-              <p class="right">Pili-ana enables journalists to partake in these discussions intuitively on their mobile devices by using Jigsasw' Perspecitve API
-              to highlight the opportunities where their involvement will have the biggest impact.
+              <p class="right">Pili-ana enables journalists to take part in these discussions intuitively on their mobile devices by using Jigsaw's Perspecitve API
+              to delete, approve and reply to comments.
               </p>
               <div class="space-20"></div>
             </div>
@@ -122,7 +122,7 @@
           <div class="row">
               <div class="col-xs-12 col-md-6">
                 <div class="page-title text-center">
-                  <p class="left">One of the key functions of journalism and news media is to enable an informed public discourse on public affairs, politics and policy. Next to the traditional news reporting and analysis, digital media have enabled new ways for the public to take part in this discourse: the comments sections on news platforms. Available on most news websites and apps, read by a significant part of most publications audiences, and ferociously contributed to by a very active core user base, they are one of the most underestimated factors in how public opinion is formed.
+                  <p class="left">One of the key functions of journalism and news media is to enable an informed public discourse on public affairs, politics and policy. Next to the traditional news reporting and analysis, digital media has found new ways for the public to take part in this discourse: the comments sections on news platforms. Available on most news websites and apps, read by a significant part of most publications audiences, and ferociously contributed to by a very active core user base, they are one of the most underestimated factors in how public opinion is formed.
                   <br /><br />
                   The vast amount of comments submitted by users, the often unrestrained hate and bile, spambots and lunatics, cynical and derogatory language, racism, sexism, off-topic reactions, and blatant nonsense, make moderation of user comments one of the most daunting tasks of modern day publishing.
                   </p>
@@ -131,7 +131,7 @@
               </div>
                 <div class="col-xs-12 col-md-6">
                   <div class="page-title text-center">
-                    <p class="left">Most media have staffed own community management teams to take care of user comments. This is obviously efficient, as journalists and editors free up time to do original reporting, but it is also a missed opportunity. If journalists and editors were to take part in the discussions on their reporting, they could immediately react to the most important inputs. For often, there are a few key comments to each piece of content, be they questions, arguments, or opinions, that have a big impact on how a story is perceived by the casual reader.
+                    <p class="left">Most media have staffed own community management teams to take care of comments. This is obviously efficient, as journalists and editors free up time to do original reporting, but it is also a missed opportunity. If journalists and editors were to take part in the discussions on their reporting, they could immediately react to the most important comments. For often, there are a few key comments to each piece of content, such as questions, arguments or opinions, that have a big impact on how a story is perceived by the reader.
                     <br /> <br />
                     <div class="space-20"></div>
                   </div>
@@ -145,12 +145,11 @@
           <div class="col-xs-12 col-md-10 col-md-offset-1">
             <div class="page-title text-center">
               <h3>Taking back the initiative</h3>
-              <p> When trolls overrun comments sections, when fake news seem just as trustworthy as original reporting,
+              <p> When trolls overrun comment sections, when fake news seem just as trustworthy as original reporting,
                       media are failing and democracy is in danger. It is essential that journalists take the initiative and enter into
-                      discussion with their audience. They need to answer questions directly, challenge alternate facts, and help the
-                      public discourse along the way. Pili-ana is an open-source, mobile-friendly web application highlighting the most
-                      relevant discussions and comments. The mobile-friendly GUI will allow journalists to efficiently interact with
-                      the highlighted opportunities, approve or delete user comments, reply to user comments.
+                      discussion with their audience. They need to answer questions directly, challenge alternative facts and help the
+                      public discourse along the way. Pili-ana is an open-source, mobile-friendly web application to help moderating 
+                      online discussions and comments. The mobile-friendly GUI allows journalists to efficiently approve, delete and reply to comments.
               </p>
               <div class="space-20"></div>
             </div>
@@ -179,8 +178,8 @@
             <div class="space-50"></div>
             <div class="bullet-point">
               <span class="bullet"></span>
-              <h4>Swipe functionality to fast and easily approve or delete user comments</h4>
-              <p>Simply swipe left to deete a comment or right to approve it. As easy as that, just like Tinder. </p>
+              <h4>Swipe functionality to fast and easily approve or delete comments</h4>
+              <p>Simply swipe left to delete a comment or right to approve it. As easy as that, just like Tinder. </p>
             </div>
 
           </div>
@@ -188,7 +187,7 @@
             <div class="space-60 hidden visible-xs"></div>
             <div class="bullet-point">
               <span class="bullet"></span>
-              <h4>Showing the toxicity level of a user comment</h4>
+              <h4>Showing the toxicity level of a comment</h4>
               <p>Pili-ana shows the toxicity score calculated by <a href="https://www.perspectiveapi.com" target="_blank" follow="noFollow">Jigsaw's Perspective API </a> to help the moderator to approve or delete a comment.</p>
             </div>
           </div>
