--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1 class="" >Re-opening the dialogue between editors and users</h1>
             <div class="space-20"></div>
             <div class="desc">
-              <p>Pili-ana is an open-source, mobile-friendly web application to help moderating online discussions and comments.
+              <p>Pili-ana is an open-source, mobile-friendly web application to help moderate online discussions and comments.
                 The mobile-friendly GUI allows journalists to efficiently approve, delete and reply to comments. 
                 Pili-ana will therefore have a vast impact on the credibility of journalists and media, empowering them to take
                 the lead in the public discussions on their platform.
@@ -124,7 +124,7 @@
                 <div class="page-title text-center">
                   <p class="left">One of the key functions of journalism and news media is to enable an informed public discourse on public affairs, politics and policy. Next to the traditional news reporting and analysis, digital media has found new ways for the public to take part in this discourse: the comments sections on news platforms. Available on most news websites and apps, read by a significant part of most publications audiences, and ferociously contributed to by a very active core user base, they are one of the most underestimated factors in how public opinion is formed.
                   <br /><br />
-                  The vast amount of comments submitted by users, the often unrestrained hate and bile, spambots and lunatics, cynical and derogatory language, racism, sexism, off-topic reactions, and blatant nonsense, make moderation of user comments one of the most daunting tasks of modern day publishing.
+                  The vast amount of comments submitted by users, the often unrestrained hate and bile, spam bots and lunatics, cynical and derogatory language, racism, sexism, off-topic reactions, and blatant nonsense, make moderation of user comments one of the most daunting tasks of modern day publishing.
                   </p>
                   <div class="space-20"></div>
                 </div>
@@ -148,7 +148,7 @@
               <p> When trolls overrun comment sections, when fake news seem just as trustworthy as original reporting,
                       media are failing and democracy is in danger. It is essential that journalists take the initiative and enter into
                       discussion with their audience. They need to answer questions directly, challenge alternative facts and help the
-                      public discourse along the way. Pili-ana is an open-source, mobile-friendly web application to help moderating 
+                      public discourse along the way. Pili-ana is an open-source, mobile-friendly web application to help moderate 
                       online discussions and comments. The mobile-friendly GUI allows journalists to efficiently approve, delete and reply to comments.
               </p>
               <div class="space-20"></div>
@@ -173,7 +173,7 @@
             <div class="bullet-point">
               <span class="bullet"></span>
               <h4>Mobile-friendly and open-source</h4>
-              <p>Pili-ana is very easy to integrate in any existing system. Only embed the Javascript and provide the API endpoints and you are ready to go.</p>
+              <p>Pili-ana is very easy to integrate in any existing system. Only embed the JavaScript and provide the API endpoints and you are ready to go.</p>
             </div>
             <div class="space-50"></div>
             <div class="bullet-point">
