--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-xs-12 col-md-6">
             <div class="page-title text-center">
               <h3 class="left">The problem</h3>
-              <p class="left">Journalists don't discuss with their audiences in the comments sections of news media. But a public
+              <p class="left">Journalists don't discuss with their audiences in the comment sections of news media. But a public
               discourse is very important for a functioning democracy.
               </p>
               <div class="space-20"></div>
@@ -122,16 +122,16 @@
           <div class="row">
               <div class="col-xs-12 col-md-6">
                 <div class="page-title text-center">
-                  <p class="left">One of the key functions of journalism and news media is to enable an informed public discourse on public affairs, politics and policy. Next to the traditional news reporting and analysis, digital media has found new ways for the public to take part in this discourse: the comments sections on news platforms. Available on most news websites and apps, read by a significant part of most publications audiences, and ferociously contributed to by a very active core user base, they are one of the most underestimated factors in how public opinion is formed.
+                  <p class="left">One of the key functions of journalism and news media is to enable an informed public discourse on public affairs, politics and policy. Next to the traditional news reporting and analysis, digital media has found new ways for the public to take part in this discourse: the comment sections on news platforms. Available on most news websites and apps, read by a significant part of most publications audiences, and ferociously contributed to by a very active core user base, they are one of the most underestimated factors in how public opinion is formed.
                   <br /><br />
-                  The vast amount of comments submitted by users, the often unrestrained hate and bile, spam bots and lunatics, cynical and derogatory language, racism, sexism, off-topic reactions, and blatant nonsense, make moderation of user comments one of the most daunting tasks of modern day publishing.
+                  The vast amount of comments submitted by users, the often unrestrained hate and bile, spam bots and trolls, cynical and derogatory language, racism, sexism, off-topic reactions, and blatant nonsense, make the moderation of user comments one of the most daunting tasks of modern day publishing.
                   </p>
                   <div class="space-20"></div>
                 </div>
               </div>
                 <div class="col-xs-12 col-md-6">
                   <div class="page-title text-center">
-                    <p class="left">Most media have staffed own community management teams to take care of comments. This is obviously efficient, as journalists and editors free up time to do original reporting, but it is also a missed opportunity. If journalists and editors were to take part in the discussions on their reporting, they could immediately react to the most important comments. For often, there are a few key comments to each piece of content, such as questions, arguments or opinions, that have a big impact on how a story is perceived by the reader.
+                    <p class="left">Most media have community management teams to moderate comments. This is obviously efficient, as journalists and editors free up time to do original reporting, but it is also a missed opportunity. If journalists and editors were to take part in the discussions on their reporting, they could immediately react to the most important comments. For often, there are a few key comments to each piece of content, such as questions, arguments or opinions, that have a big impact on how a story is perceived by the reader.
                     <br /> <br />
                     <div class="space-20"></div>
                   </div>
@@ -144,7 +144,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-10 col-md-offset-1">
             <div class="page-title text-center">
-              <h3>Taking back the initiative</h3>
+              <h3>Taking Back the Initiative</h3>
               <p> When trolls overrun comment sections, when fake news seem just as trustworthy as original reporting,
                       media are failing and democracy is in danger. It is essential that journalists take the initiative and enter into
                       discussion with their audience. They need to answer questions directly, challenge alternative facts and help the
