--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               </div>
                 <div class="col-xs-12 col-md-6">
                   <div class="page-title text-center">
-                    <p class="left">Most media have community management teams to moderate comments. This is obviously efficient, as journalists and editors free up time to do original reporting, but it is also a missed opportunity. If journalists and editors were to take part in the discussions on their reporting, they could immediately react to the most important comments. For often, there are a few key comments to each piece of content, such as questions, arguments or opinions, that have a big impact on how a story is perceived by the reader.
+                    <p class="left">Most media have community management teams to moderate comments. This is obviously efficient, as journalists and editors free up time to do original reporting, but it is also a missed opportunity. If journalists and editors were to take part in the discussions on their reporting, they could immediately react to the most important comments. There are often a few key comments on each piece of content, such as questions, arguments or opinions, that have a big impact on how a story is perceived by the reader.
                     <br /> <br />
                     <div class="space-20"></div>
                   </div>
